Bug 117892 - Area tab: Bitmap preview is not shown
Summary: Area tab: Bitmap preview is not shown
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:6.2.0 target:6.1.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Regressions-imageHandling
  Show dependency treegraph
 
Reported: 2018-05-30 00:32 UTC by Jim Raykowski
Modified: 2018-08-07 16:47 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2018-05-30 00:32:03 UTC
Format > Paragraph > Area > Bitmap
or 
Format > Page > Area > Bitmap

result: Preview window is always blue

expected result: Preview window shows preview of selected bitmap

Version: 6.1.0.0.alpha1+
Build ID: 0374babfa347844a04c43abca57aa5e6b4ccbaaf
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk2; 
Locale: en-US (en_US.UTF-8); Calc: group

and

Version: 6.1.0.0.alpha1+ (x64)
Build ID: 7237db44dfac914e5b6003f418267d3df1e7f162
CPU threads: 4; OS: Windows 10.0; UI render: default;
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-05-05_12:19:17
Locale: en-US (en_US); Calc: group
Comment 1 raal 2018-05-30 05:43:51 UTC
This seems to have begun at the below commit.
Adding Cc: to Tomaž Vajngerl ; Could you possibly take a look at this one?
Thanks
 c5e18ecabec7818a55e4a887ec4fe3d6739d7c49 is the first bad commit
commit c5e18ecabec7818a55e4a887ec4fe3d6739d7c49
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Fri Apr 20 09:59:26 2018 +0200

    source 7b355669c6ddeab2e6cec692d6afdff41c61d0fb

author	Tomaž Vajngerl <tomaz.vajngerl@collabora.co.uk>	2018-04-14 15:13:05 +0900
committer	Tomaž Vajngerl <quikee@gmail.com>	2018-04-20 09:15:22 +0200
commit 7b355669c6ddeab2e6cec692d6afdff41c61d0fb (patch)
tree 46c55326bccfa68a2bb5fad6d637e0f4576c8d68
parent 663fd3d6e1f93ec989dc289e688d5dbfe434cbca (diff)
Function to load graphic swapped out (loaded on demand)
Comment 2 Xisco Faulí 2018-06-05 21:51:17 UTC
Still reproducible in

Version: 6.2.0.0.alpha0+
Build ID: 48b49937fed5e50d299a94063eb325799ff672e9
CPU threads: 1; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-06-05_01:47:06
Locale: es-ES (es_ES); Calc: group threaded
Comment 3 Telesto 2018-07-18 12:46:28 UTC
Also for table properties -> background -> bitmap
Comment 4 Jim Raykowski 2018-07-27 23:51:40 UTC
This blue box seems to be the correct behavior since in this case there hasn't yet been a bitmap assigned to the area. But it should show the selection from the Bitmap listbox which it does not unless there is already a bitmap for the area or by following these steps:

1) Menu > Format > Paragraph
Paragraph dialog opens
2) Select Area tab
3) Select Bitmap button
Area Bitmap tabpage shows blue bitmap preview
4) Select any bitmap from the Bitmap listbox
Preview still shows blue
5) Select a different tab (Indents & Spacing, Alignment, Text Flow ...)
6) Reselect the Area tab
Preview still shows blue
7) Select None, Color, Gradiant, Pattern, or Hatch button
8) Reselect Bitmap button

Results:
Preview displays bitmap selected in step 4 and subsequent bitmaps selected from the Bitmap listbox.

Analysis:
A warning message is displayed to the console when there is no initial bitmap
warn:legacy.osl:24288:24288:svx/source/sdr/primitive2d/sdrattributecreator.cxx:639: No fill graphic in SfxItemSet (!)

A patch for this is presented here:
https://gerrit.libreoffice.org/#/c/58206/

The same can be done for the Area Pattern tab page which suffers the same.
Comment 5 Commit Notification 2018-07-31 11:37:10 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=10b865fc00a97e5ad0bf76cb9bad774933e25461

tdf#117892 Blue Area/Background Bitmap tabpage Preview fix

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2018-08-06 17:00:16 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c936193b51c9328f9279078207bddfca23995b05&h=libreoffice-6-1

tdf#117892 Blue Area/Background Bitmap tabpage Preview fix

It will be available in 6.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2018-08-07 16:47:47 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: c86a47a9d3debbc7e8ee6247f573e7f98c611f19
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded

@Jim Raykowski, thanks for fixing this!!