tdf#117892 Blue Area/Background Bitmap tabpage Preview fix

Change-Id: Iaef3651407d1df85b1cb221821d47c33e111016e
Reviewed-on: https://gerrit.libreoffice.org/58206
Tested-by: Jenkins
Tested-by: Xisco Faulí <xiscofauli@libreoffice.org>
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>
(cherry picked from commit 10b865fc00a97e5ad0bf76cb9bad774933e25461)